curator/meilisearch/archive/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: meilisearch
  namespace: curator
  labels:
    app: meilisearch
    app.kubernetes.io/instance: meilisearch
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: meilisearch
    app.kubernetes.io/part-of: meilisearch
    helm.sh/chart: meilisearch-0.4.3
  annotations:
    meta.helm.sh/release-name: meilisearch
    meta.helm.sh/release-namespace: curator
spec:
  selector:
    istio: ingressgateway # This is a standard label for Istio ingress gateway services
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - search.curator.atemkeng.eu
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: meilisearch
  namespace: curator
  labels:
    app: meilisearch
    app.kubernetes.io/instance: meilisearch
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: meilisearch
    app.kubernetes.io/part-of: meilisearch
    helm.sh/chart: meilisearch-0.4.3
  annotations:
    meta.helm.sh/release-name: meilisearch
    meta.helm.sh/release-namespace: curator
spec:
  hosts:
    - search.curator.atemkeng.eu
  gateways:
    - meilisearch
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: meilisearch
            port:
              number: 7700
